Added background highlight to changed lessons.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -47,7 +47,7 @@
 	<string name = "sub_folders_header">Пожалуйста, укажи принадлежность нужной группы:</string>
 	<string name = "ok">ОК.</string>
 	<string name = "changes_receiving_begin">Начато получение замен. \nСмените ориентацию,
-		чтобы отменить получение замен.</string>
+		чтобы отменить процесс.</string>
 	<string name = "there_is_no_changes">Нет доступных замен для текущей даты/группы.</string>
 	<string name = "changes_received_successfully">Получение замен выполнено.</string>
 	<string name = "changes_get_exception">Не удалось получить замены. \nПроизошла ошибка.</string>
