Added favorite groups activity. Now you can get access to them right from this activity.
Also expanded JavaDoc on Activity classes — now they have required parameters, that must be sent from "Intent.putExtra()".

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,5 +61,6 @@
 	<string name = "example_group_course">Курс: N.</string>
 	<string name = "example_branch">Отделение: [Значение_Примера].</string>
 	<string name = "example_sub_group">[N].</string>
-	<string name = "course">Курс: %d.</string>
+	<string name = "course">Курс: %d</string>
+	<string name = "group_type">Тип: %s</string>
 </resources>
